소스 정리 및 블로그 페이지 추가

--- a/src/blog.html
+++ b/src/blog.html
@@ -1,1 +1,59 @@
-blog
+<div class="blog_post">
+  <div class="row">
+    <div class="col-xs-12 col-sm-5 col-md-5 blog_imgbox">
+      <a href="blog_detail.html">
+        <img src="img/image1.jpg" alt="workimg" style="width:100%">
+      </a>
+    </div>
+    <div class="col-xs-12 col-sm-7 col-md-7 blog_txtbox">
+      <ul class="post_detail">
+          <li>by <a href="about.html">gjjoo</a></li>
+          <li><i class="fa fa-calendar"></i>2015.11.03</li>
+          <li><i class="fa fa-tag"></i><a href="category/sports">스포츠</a></li>
+      </ul>
+      <h2 class="post_title"><a href="blog_detail.html">국민의 자유와 권리는 헌법에 열거되지 아니한 이유로 경시되지 아니한다.</a></h2>
+      <p class="post_desc ellipsis_line4">국가는 주택개발정책등을 통하여 모든 국민이 쾌적한 주거생활을 할 수 있도록 노력하여야 한다. 정당은 법률이 정하는 바에 의하여 국가의 보호를 받으며, 국가는 법률이 정하는 바에 의하여 정당운영에 필요한 자금을 보조할 수 있다. 대통령은 제4항과 제5항의 규정에 의하여 확정된 법률을 지체없이 공포하여야 한다. 제5항에 의하여 법률이 확정된 후 또는 제4항에 의한 확정법률이 정부에 이송된 후 5일 이내에 대통령이 공포하지 아니할 때에는 국회의장이 이를 공포한다.</p>
+      <p><a href="blog_detail.html" class="post_readmore">더보기</a></p>
+    </div>
+  </div>
+</div>
+
+<div class="blog_post">
+  <div class="row">
+    <div class="col-xs-12 col-sm-5 col-md-5 blog_imgbox">
+      <a href="blog_detail.html">
+        <img src="img/image2.jpg" alt="workimg" style="width:100%">
+      </a>
+    </div>
+    <div class="col-xs-12 col-sm-7 col-md-7 blog_txtbox">
+      <ul class="post_detail">
+          <li>by <a href="about.html">gjjoo</a></li>
+          <li><i class="fa fa-calendar"></i>2015.11.03</li>
+          <li><i class="fa fa-tag"></i><a href="category/sports">스포츠</a></li>
+      </ul>
+      <h2 class="post_title"><a href="blog_detail.html">국민의 자유와 권리는 헌법에 열거되지 아니한 이유로 경시되지 아니한다.</a></h2>
+      <p class="post_desc ellipsis_line4">국가는 주택개발정책등을 통하여 모든 국민이 쾌적한 주거생활을 할 수 있도록 노력하여야 한다. 정당은 법률이 정하는 바에 의하여 국가의 보호를 받으며, 국가는 법률이 정하는 바에 의하여 정당운영에 필요한 자금을 보조할 수 있다. 대통령은 제4항과 제5항의 규정에 의하여 확정된 법률을 지체없이 공포하여야 한다. 제5항에 의하여 법률이 확정된 후 또는 제4항에 의한 확정법률이 정부에 이송된 후 5일 이내에 대통령이 공포하지 아니할 때에는 국회의장이 이를 공포한다.</p>
+      <p><a href="blog_detail.html" class="post_readmore">더보기</a></p>
+    </div>
+  </div>
+</div>
+
+<div class="blog_post">
+  <div class="row">
+    <div class="col-xs-12 col-sm-5 col-md-5 blog_imgbox">
+      <a href="blog_detail.html">
+        <img src="img/image3.jpg" alt="workimg" style="width:100%">
+      </a>
+    </div>
+    <div class="col-xs-12 col-sm-7 col-md-7 blog_txtbox">
+      <ul class="post_detail">
+          <li>by <a href="about.html">gjjoo</a></li>
+          <li><i class="fa fa-calendar"></i>2015.11.03</li>
+          <li><i class="fa fa-tag"></i><a href="category/sports">스포츠</a></li>
+      </ul>
+      <h2 class="post_title"><a href="blog_detail.html">국민의 자유와 권리는 헌법에 열거되지 아니한 이유로 경시되지 아니한다.</a></h2>
+      <p class="post_desc ellipsis_line4">국가는 주택개발정책등을 통하여 모든 국민이 쾌적한 주거생활을 할 수 있도록 노력하여야 한다. 정당은 법률이 정하는 바에 의하여 국가의 보호를 받으며, 국가는 법률이 정하는 바에 의하여 정당운영에 필요한 자금을 보조할 수 있다. 대통령은 제4항과 제5항의 규정에 의하여 확정된 법률을 지체없이 공포하여야 한다. 제5항에 의하여 법률이 확정된 후 또는 제4항에 의한 확정법률이 정부에 이송된 후 5일 이내에 대통령이 공포하지 아니할 때에는 국회의장이 이를 공포한다.</p>
+      <p><a href="blog_detail.html" class="post_readmore">더보기</a></p>
+    </div>
+  </div>
+</div>
