--- a/src/home.html
+++ b/src/home.html
@@ -3,113 +3,92 @@
   <div class="home_grid-item">
     <article>
       <img src="img/image1.jpg" alt="image1">
-      <header>
-        <p class="post_date"><span class="fa fa-clock-o" title="날짜"></span>2015년 10월 19일 월요일 PM 03:31</p>
-        <p class="post_tit ellipsis"><a href="#">대통령의 임기는 5년? 대통령의 임기는 5년? 대통령의 임기는 5년?</a></p>
-      </header>
-      <section class="post_content">
-        <a href="#">공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다. 공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다.</a>
-      </section>
-      <footer class="post_footer">
-        <p class="post_like_view"><span class="fa fa-heart" title="좋아요"></span><a href="#">120 좋아요</a></p>
-        <p class="post_cmt_view"><span class="fa fa-commenting" title="댓글"></span><a href="#">20 댓글</a></p>
-      </footer>
+      <div class="mask_box">
+        <h3><a href="blog_detail.html" class="ellipsis">대통령의 임기는 5년?</a></h3>
+        <ul class="post_detail">
+            <li>by <a href="about.html">gjjoo</a></li>
+            <li><i class="fa fa-calendar"></i>2015.11.03</li>         
+        </ul>
+        <p class="ellipsis_line4">공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다. 공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다.</p>
+      </div>
     </article>
   </div>
   <div class="home_grid-item">
     <article>
       <img src="img/image2.jpg" alt="image2">
-      <header>
-        <p class="post_date"><span class="fa fa-clock-o" title="날짜"></span>2015년 10월 19일 월요일 PM 03:31</p>
-        <p class="post_tit ellipsis"><a href="#">대통령의 임기는 5년? 대통령의 임기는 5년? 대통령의 임기는 5년?</a></p>
-      </header>
-      <section class="post_content">
-        <a href="#">공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다. 공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다.</a>
-      </section>
-      <footer class="post_footer">
-        <p class="post_like_view"><span class="fa fa-heart" title="좋아요"></span><a href="#">120 좋아요</a></p>
-        <p class="post_cmt_view"><span class="fa fa-commenting" title="댓글"></span><a href="#">20 댓글</a></p>
-      </footer>
+      <div class="mask_box">
+        <h3><a href="blog_detail.html" class="ellipsis">대통령의 임기는 5년?</a></h3>
+        <ul class="post_detail">
+            <li>by <a href="about.html">gjjoo</a></li>
+            <li><i class="fa fa-calendar"></i>2015.11.03</li>         
+        </ul>
+        <p class="ellipsis_line4">공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다. 공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다. </p>
+      </div>
     </article>
   </div>
   <div class="home_grid-item">
     <article>
       <img src="img/image3.jpg" alt="image3">
-      <header>
-        <p class="post_date"><span class="fa fa-clock-o" title="날짜"></span>2015년 10월 19일 월요일 PM 03:31</p>
-        <p class="post_tit ellipsis"><a href="#">대통령의 임기는 5년? 대통령의 임기는 5년? 대통령의 임기는 5년?</a></p>
-      </header>
-      <section class="post_content">
-        <a href="#">공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다. 공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다.</a>
-      </section>
-      <footer class="post_footer">
-        <p class="post_like_view"><span class="fa fa-heart" title="좋아요"></span><a href="#">120 좋아요</a></p>
-        <p class="post_cmt_view"><span class="fa fa-commenting" title="댓글"></span><a href="#">20 댓글</a></p>
-      </footer>
+      <div class="mask_box">
+        <h3><a href="blog_detail.html" class="ellipsis">대통령의 임기는 5년?</a></h3>
+        <ul class="post_detail">
+            <li>by <a href="about.html">gjjoo</a></li>
+            <li><i class="fa fa-calendar"></i>2015.11.03</li>         
+        </ul>
+        <p class="ellipsis_line4">공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다. 공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다.</p>
+      </div>
     </article>
   </div>
   <div class="home_grid-item">
     <article>
       <img src="img/image4.jpg" alt="image4">
-      <header>
-        <p class="post_date"><span class="fa fa-clock-o" title="날짜"></span>2015년 10월 19일 월요일 PM 03:31</p>
-        <p class="post_tit ellipsis"><a href="#">대통령의 임기는 5년? 대통령의 임기는 5년? 대통령의 임기는 5년?</a></p>
-      </header>
-      <section class="post_content">
-        <a href="#">공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다. 공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다.</a>
-      </section>
-      <footer class="post_footer">
-        <p class="post_like_view"><span class="fa fa-heart" title="좋아요"></span><a href="#">120 좋아요</a></p>
-        <p class="post_cmt_view"><span class="fa fa-commenting" title="댓글"></span><a href="#">20 댓글</a></p>
-      </footer>
+      <div class="mask_box">
+        <h3><a href="blog_detail.html" class="ellipsis">대통령의 임기는 5년?</a></h3>
+        <ul class="post_detail">
+            <li>by <a href="about.html">gjjoo</a></li>
+            <li><i class="fa fa-calendar"></i>2015.11.03</li>         
+        </ul>
+        <p class="ellipsis_line4">공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다. 공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다.</p>
+      </div>
     </article>
   </div>
   <div class="home_grid-item">
     <article>
       <img src="img/image5.jpg" alt="image5">
-      <header>
-        <p class="post_date"><span class="fa fa-clock-o" title="날짜"></span>2015년 10월 19일 월요일 PM 03:31</p>
-        <p class="post_tit ellipsis"><a href="#">대통령의 임기는 5년? 대통령의 임기는 5년? 대통령의 임기는 5년?</a></p>
-      </header>
-      <section class="post_content">
-        <a href="#">공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다. 공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다.</a>
-      </section>
-      <footer class="post_footer">
-        <p class="post_like_view"><span class="fa fa-heart" title="좋아요"></span><a href="#">120 좋아요</a></p>
-        <p class="post_cmt_view"><span class="fa fa-commenting" title="댓글"></span><a href="#">20 댓글</a></p>
-      </footer>
+      <div class="mask_box">
+        <h3><a href="blog_detail.html" class="ellipsis">대통령의 임기는 5년?</a></h3>
+        <ul class="post_detail">
+            <li>by <a href="about.html">gjjoo</a></li>
+            <li><i class="fa fa-calendar"></i>2015.11.03</li>         
+        </ul>
+        <p class="ellipsis_line4">공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다. 공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다.</p>
+      </div>
     </article>
   </div>
   <div class="home_grid-item">
     <article>
       <img src="img/image6.jpg" alt="image6">
-      <header>
-        <p class="post_date"><span class="fa fa-clock-o" title="날짜"></span>2015년 10월 19일 월요일 PM 03:31</p>
-        <p class="post_tit ellipsis"><a href="#">대통령의 임기는 5년? 대통령의 임기는 5년? 대통령의 임기는 5년?</a></p>
-      </header>
-      <section class="post_content">
-        <a href="#">공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다. 공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다.</a>
-      </section>
-      <footer class="post_footer">
-        <p class="post_like_view"><span class="fa fa-heart" title="좋아요"></span><a href="#">120 좋아요</a></p>
-        <p class="post_cmt_view"><span class="fa fa-commenting" title="댓글"></span><a href="#">20 댓글</a></p>
-      </footer>
+      <div class="mask_box">
+        <h3><a href="blog_detail.html" class="ellipsis">대통령의 임기는 5년?</a></h3>
+        <ul class="post_detail">
+            <li>by <a href="about.html">gjjoo</a></li>
+            <li><i class="fa fa-calendar"></i>2015.11.03</li>         
+        </ul>
+        <p class="ellipsis_line4">공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다. 공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다.</p>
+      </div>
     </article>
   </div>
   <div class="home_grid-item">
     <article>
       <img src="img/image7.jpg" alt="image7">
-      <header>
-        <p class="post_date"><span class="fa fa-clock-o" title="날짜"></span>2015년 10월 19일 월요일 PM 03:31</p>
-        <p class="post_tit ellipsis"><a href="#">대통령의 임기는 5년? 대통령의 임기는 5년? 대통령의 임기는 5년?</a></p>
-      </header>
-      <section class="post_content">
-        <a href="#">공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다. 공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다.</a>
-      </section>
-      <footer class="post_footer">
-        <p class="post_like_view"><span class="fa fa-heart" title="좋아요"></span><a href="#">120 좋아요</a></p>
-        <p class="post_cmt_view"><span class="fa fa-commenting" title="댓글"></span><a href="#">20 댓글</a></p>
-      </footer>
+      <div class="mask_box">
+        <h3><a href="blog_detail.html" class="ellipsis">대통령의 임기는 5년?</a></h3>
+        <ul class="post_detail">
+            <li>by <a href="about.html">gjjoo</a></li>
+            <li><i class="fa fa-calendar"></i>2015.11.03</li>         
+        </ul>
+        <p class="ellipsis_line4">공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다. 공무원인 근로자는 법률이 정하는 자에 한하여 단결권, 단체교섭권 및 단체행동권을 가진다.</p>
+      </div>
     </article>
   </div>
 </div>
