--- a/src/index.html
+++ b/src/index.html
@@ -21,13 +21,17 @@
 
 </head>
 <body>
+  <!-- skip -->
+  <a href="#content" class="skip-to-main">본문 바로가기</a>
+
   <!-- 전체페이지 -->
-  <div id="wrap">
+  <div id="wrap"> 
+
     <!-- 머릿말 -->
-    <header id="header">
+    <header id="header"> 
       <!-- 브랜드 및 로고 -->
       <div id="brand">
-        <h1>ZOO BLOG<small>Glad to meet you!</small></h1>
+        <h1><a href="http://localhost:8080">ZOO BLOG</a><small>Glad to meet you!</small></h1>
       </div>
       <!-- //브랜드 및 로고 -->
 
@@ -49,7 +53,7 @@
           <ul>
             <li><a href="home.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
-            <li class="active"><a href="portfolio.html">PORTFOLIO</a></li>
+            <li><a href="portfolio.html">PORTFOLIO</a></li>
             <li><a href="blog.html">BLOG</a></li>
             <li><a href="contact.html">CONTACT</a></li>
           </ul>
