--- a/src/index.html
+++ b/src/index.html
@@ -38,10 +38,10 @@
       <!-- 네비게이션 -->
       <nav id="navigation">
         <!-- 모바일용 메뉴 버튼 -->
-        <button type="button" class="btn toggle-menu"><i class="fa fa-bars fa-lg"></i></button>
+        <button type="button" class="btn toggle-menu"><i class="fa fa-bars fa-lg" role="img" aria-label="메뉴"></i></button>
 
         <!-- 모바일용 사이드바 버튼 -->
-        <button class="btn toggle-sidebar"><i class="fa fa-cog fa-lg"></i></button>
+        <button class="btn toggle-sidebar"><i class="fa fa-cog fa-lg" role="img" aria-label="사이드바"></i></button>
 
         <!-- 모바일용 페이지 제목 -->
         <div class="title">
