--- a/src/blog.html
+++ b/src/blog.html
@@ -113,7 +113,7 @@
       </ul>
     </div>
     <div class="sidebar_box">
-      <h4>Popular Post</h4>
+      <h4>TAGS</h4>
       <ul class="tag_list">
         <li><a href="#">HTML</a></li>
         <li><a href="#">CSS</a></li>
