--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
             <li><a href="home.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="portfolio.html">PORTFOLIO</a></li>
-            <li><a href="blog.html">BLOG</a></li>
+            <li><a href="blog2.html">BLOG</a></li>
             <li><a href="contact.html">CONTACT</a></li>
           </ul>
         </div>
