--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<!--[if IE 6]> <html class="no-js lt-ie10 lt-ie9 lt-ie8 ie6" lang="ko-KR"> <![endif]-->
-<!--[if IE 7]> <html class="no-js lt-ie10 lt-ie9 lt-ie8 ie7" lang="ko-KR"> <![endif]-->
-<!--[if IE 8]> <html class="no-js lt-ie10 lt-ie9 ie8" lang="ko-KR"> <![endif]-->
-<!--[if IE 9]> <html class="no-js lt-ie10 ie9" lang="ko-KR"> <![endif]-->
-<!--[if !IE]><!--> <html class="no-js" lang="ko-KR"> <!--<![endif]-->
+<!--[if !IE]><!-->
+<html lang="ko-KR" class="no-js">
+<!--<![endif]-->
+<!--[if IE 8]><html lang="ko-KR" class="ie lt-ie10 ie8 no-js"><![endif]-->
+<!--[if IE 9]><html lang="ko-KR" class="ie lt-ie10 ie9 no-js"><![endif]-->
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -42,10 +42,10 @@
       <!-- 네비게이션 -->
       <nav id="navigation">
         <!-- 모바일용 메뉴 버튼 -->
-        <button type="button" class="btn toggle-menu"><i class="fa fa-bars fa-lg" role="img" aria-label="메뉴"></i></button>
+        <button type="button" class="btn toggle-menu"><i class="fa fa-bars fa-lg" role="button" aria-label="메뉴"></i></button>
 
         <!-- 모바일용 사이드바 버튼 -->
-        <button class="btn toggle-sidebar"><i class="fa fa-cog fa-lg" role="img" aria-label="사이드바"></i></button>
+        <button class="btn toggle-sidebar"><i class="fa fa-cog fa-lg" role="button" aria-label="사이드바"></i></button>
 
         <!-- 모바일용 페이지 제목 -->
         <div class="title">
