경로 문제 수정

--- a/src/blog.html
+++ b/src/blog.html
@@ -55,11 +55,11 @@
         <!-- PC 및 모바일용 메뉴 -->
         <div class="menu">
           <ul>
-            <li><a href="/home.html">HOME</a></li>
-            <li><a href="/about.html">ABOUT</a></li>
-            <li><a href="/portfolio.html">PORTFOLIO</a></li>
-            <li class="active"><a href="/blog.html">BLOG</a></li>
-            <li><a href="/contact.html">CONTACT</a></li>
+            <li><a href="home.html">HOME</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="portfolio.html">PORTFOLIO</a></li>
+            <li class="active"><a href="blog.html">BLOG</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
           </ul>
         </div>
       </nav>
@@ -74,7 +74,7 @@
           <div class="blog_post">
             <div class="row">
               <div class="col-xs-12 col-sm-5 col-md-5 blog_imgbox">
-                <a href="/blog_detail.html">
+                <a href="blog_detail.html">
                   <img src="img/image1.jpg" alt="workimg" style="width:100%">
                 </a>
               </div>
@@ -94,7 +94,7 @@
           <div class="blog_post">
             <div class="row">
               <div class="col-xs-12 col-sm-5 col-md-5 blog_imgbox">
-                <a href="/blog_detail.html">
+                <a href="blog_detail.html">
                   <img src="img/image2.jpg" alt="workimg" style="width:100%">
                 </a>
               </div>
@@ -114,7 +114,7 @@
           <div class="blog_post">
             <div class="row">
               <div class="col-xs-12 col-sm-5 col-md-5 blog_imgbox">
-                <a href="/blog_detail.html">
+                <a href="blog_detail.html">
                   <img src="img/image3.jpg" alt="workimg" style="width:100%">
                 </a>
               </div>
