--- a/src/blog2.html
+++ b/src/blog2.html
@@ -55,11 +55,11 @@
         <!-- PC 및 모바일용 메뉴 -->
         <div class="menu">
           <ul>
-            <li><a href="/home.html">HOME</a></li>
-            <li><a href="/about.html">ABOUT</a></li>
-            <li><a href="/portfolio.html">PORTFOLIO</a></li>
-            <li class="active"><a href="/blog2.html">BLOG</a></li>
-            <li><a href="/contact.html">CONTACT</a></li>
+            <li><a href="home.html">HOME</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="portfolio.html">PORTFOLIO</a></li>
+            <li class="active"><a href="blog2.html">BLOG</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
           </ul>
         </div>
       </nav>
