--- a/src/blog.html
+++ b/src/blog.html
@@ -35,7 +35,7 @@
     <header id="header">
       <!-- 브랜드 및 로고 -->
       <div id="brand">
-        <h1><a href="http://localhost:8080">ZOO BLOG</a><small>Glad to meet you!</small></h1>
+        <h1><a href="http://gjjoo.github.io/blog/dist/blog.html">ZOO BLOG</a><small>Glad to meet you!</small></h1>
       </div>
       <!-- //브랜드 및 로고 -->
 
@@ -84,9 +84,9 @@
                     <li><i class="fa fa-calendar"></i>2015.11.03</li>
                     <li><i class="fa fa-tag"></i><a href="category/sports">스포츠</a></li>
                 </ul>
-                <h2 class="post_title ellipsis"><a href="/blog_detail.html">국민의 자유와 권리는 헌법에 열거되지 아니한 이유로 경시되지 아니한다.</a></h2>
+                <h2 class="post_title ellipsis"><a href="blog_detail.html">국민의 자유와 권리는 헌법에 열거되지 아니한 이유로 경시되지 아니한다.</a></h2>
                 <p class="post_desc ellipsis_line4">공무원의 신분과 정치적 중립성은 법률이 정하는 바에 의하여 보장된다. 군인은 현역을 면한 후가 아니면 국무총리로 임명될 수 없다. 국회는 법률에 저촉되지 아니하는 범위안에서 의사와 내부규율에 관한 규칙을 제정할 수 있다. 근로자는 근로조건의 향상을 위하여 자주적인 단결권·단체교섭권 및 단체행동권을 가진다.<br>국토와 자원은 국가의 보호를 받으며, 국가는 그 균형있는 개발과 이용을 위하여 필요한 계획을 수립한다. 저작자·발명가·과학기술자와 예술가의 권리는 법률로써 보호한다. 국가안전보장회의는 대통령이 주재한다. 대법원장과 대법관이 아닌 법관의 임기는 10년으로 하며, 법률이 정하는 바에 의하여 연임할 수 있다.<br>대통령은 법률이 정하는 바에 의하여 사면·감형 또는 복권을 명할 수 있다. 근로조건의 기준은 인간의 존엄성을 보장하도록 법률로 정한다. 비상계엄하의 군사재판은 군인·군무원의 범죄나 군사에 관한 간첩죄의 경우와 초병·초소·유독음식물공급·포로에 관한 죄중 법률이 정한 경우에 한하여 단심으로 할 수 있다. 다만, 사형을 선고한 경우에는 그러하지 아니하다.<br>헌법재판소는 법률에 저촉되지 아니하는 범위안에서 심판에 관한 절차, 내부규율과 사무처리에 관한 규칙을 제정할 수 있다. 공공필요에 의한 재산권의 수용·사용 또는 제한 및 그에 대한 보상은 법률로써 하되, 정당한 보상을 지급하여야 한다. 재산권의 행사는 공공복리에 적합하도록 하여야 한다. 국민의 자유와 권리는 헌법에 열거되지 아니한 이유로 경시되지 아니한다.</p>
-                <p><a href="/blog_detail.html" class="post_readmore">더보기</a></p>
+                <p><a href="blog_detail.html" class="post_readmore">더보기</a></p>
               </div>
             </div>
           </div>
@@ -104,9 +104,9 @@
                     <li><i class="fa fa-calendar"></i>2015.11.03</li>
                     <li><i class="fa fa-tag"></i><a href="category/sports">스포츠</a></li>
                 </ul>
-                <h2 class="post_title ellipsis"><a href="/blog_detail.html">국민의 자유와 권리는 헌법에 열거되지 아니한 이유로 경시되지 아니한다.</a></h2>
+                <h2 class="post_title ellipsis"><a href="blog_detail.html">국민의 자유와 권리는 헌법에 열거되지 아니한 이유로 경시되지 아니한다.</a></h2>
                 <p class="post_desc ellipsis_line4">국가는 주택개발정책등을 통하여 모든 국민이 쾌적한 주거생활을 할 수 있도록 노력하여야 한다. 정당은 법률이 정하는 바에 의하여 국가의 보호를 받으며, 국가는 법률이 정하는 바에 의하여 정당운영에 필요한 자금을 보조할 수 있다. 대통령은 제4항과 제5항의 규정에 의하여 확정된 법률을 지체없이 공포하여야 한다. 제5항에 의하여 법률이 확정된 후 또는 제4항에 의한 확정법률이 정부에 이송된 후 5일 이내에 대통령이 공포하지 아니할 때에는 국회의장이 이를 공포한다.</p>
-                <p><a href="/blog_detail.html" class="post_readmore">더보기</a></p>
+                <p><a href="blog_detail.html" class="post_readmore">더보기</a></p>
               </div>
             </div>
           </div>
@@ -124,9 +124,9 @@
                     <li><i class="fa fa-calendar"></i>2015.11.03</li>
                     <li><i class="fa fa-tag"></i><a href="category/sports">스포츠</a></li>
                 </ul>
-                <h2 class="post_title ellipsis"><a href="/blog_detail.html">국민의 자유와 권리는 헌법에 열거되지 아니한 이유로 경시되지 아니한다.</a></h2>
+                <h2 class="post_title ellipsis"><a href="blog_detail.html">국민의 자유와 권리는 헌법에 열거되지 아니한 이유로 경시되지 아니한다.</a></h2>
                 <p class="post_desc ellipsis_line4">국가는 주택개발정책등을 통하여 모든 국민이 쾌적한 주거생활을 할 수 있도록 노력하여야 한다. 정당은 법률이 정하는 바에 의하여 국가의 보호를 받으며, 국가는 법률이 정하는 바에 의하여 정당운영에 필요한 자금을 보조할 수 있다. 대통령은 제4항과 제5항의 규정에 의하여 확정된 법률을 지체없이 공포하여야 한다. 제5항에 의하여 법률이 확정된 후 또는 제4항에 의한 확정법률이 정부에 이송된 후 5일 이내에 대통령이 공포하지 아니할 때에는 국회의장이 이를 공포한다.</p>
-                <p><a href="/blog_detail.html" class="post_readmore">더보기</a></p>
+                <p><a href="blog_detail.html" class="post_readmore">더보기</a></p>
               </div>
             </div>
           </div>
