--- a/src/blog2.html
+++ b/src/blog2.html
@@ -35,7 +35,7 @@
     <header id="header">
       <!-- 브랜드 및 로고 -->
       <div id="brand">
-        <h1><a href="http://localhost:8080">ZOO BLOG</a><small>Glad to meet you!</small></h1>
+        <h1><a href="http://gjjoo.github.io/blog/dist/blog.html">ZOO BLOG</a><small>Glad to meet you!</small></h1>
       </div>
       <!-- //브랜드 및 로고 -->
 
