--- a/src/contact.html
+++ b/src/contact.html
@@ -10,7 +10,7 @@
   <title>ZOO BLOG</title>
   <meta name="description" content="blog,weblog,블로그">
   <meta name="author" content="gjjoo">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
   <link rel="stylesheet" href="css/normalize/normalize.css">
   <link rel="stylesheet" href="css/font-awesome/css/font-awesome.css">
@@ -100,16 +100,15 @@
   <!-- //전체페이지 -->
 
   <script src="js/libs/jquery/dist/jquery.min.js"></script>
-  <script src="js/vendor/jquery.sticky.js"></script>
   <script src="js/script.js"></script>
   <script>
     function initMap() {
       var cairo = {lat: 37.486769, lng: 126.969820};
-
       var map = new google.maps.Map(document.getElementById('map'), {
         scaleControl: true,
         center: cairo,
-        zoom: 15
+        zoom: 15,
+        draggable: false
       });
 
       var infowindow = new google.maps.InfoWindow;
