접근성 부분 및 오타 수정

--- a/src/blog_detail.html
+++ b/src/blog_detail.html
@@ -80,8 +80,8 @@
               <div class="blog_txtbox">
                 <ul class="post_detail">
                     <li>by <a href="about.html">gjjoo</a></li>
-                    <li><i class="fa fa-calendar"></i>2015.11.03</li>
-                    <li><i class="fa fa-tag"></i><a href="category/sports">스포츠</a></li>
+                    <li><i class="fa fa-calendar" role="img" aria-label="달력"></i>2015.11.03</li>
+                    <li><i class="fa fa-tag" role="img" aria-label="카테고리"></i><a href="category/sports">스포츠</a></li>
                 </ul>
                 <h2 class="post_title"><a href="blog_detail.html">국민
                 의 자유와 권리는 헌법에 열거되지 아니한 이유로 경시되지 아니한다.</a></h2>
@@ -106,10 +106,10 @@
             <div class="share_list">
               <h4>Shar</h4>
               <ul>
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                <li><a href="#"><i class="fa fa-envelope-o"></i></a></li>
+                <li><a href="#"><i class="fa fa-facebook" role="img" aria-label="페이스북"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter" role="img" aria-label="트위터"></i></a></li>
+                <li><a href="#"><i class="fa fa-google-plus" role="img" aria-label="구글"></i></a></li>
+                <li><a href="#"><i class="fa fa-envelope-o" role="img" aria-label="메일"></i></a></li>
               </ul>
             </div>
             <div class="leave_comment">
@@ -182,13 +182,13 @@
           <div class="sidebar_box">
               <h4>Categories</h4>
               <ul class="cat_list">
-                  <li> <a href="#">Linux</a> <i class="fa fa-angle-right"></i></li>
-                  <li> <a href="#">News</a> <i class="fa fa-angle-right"></i></li>
-                  <li> <a href="#">Project</a> <i class="fa fa-angle-right"></i></li>
-                  <li> <a href="#">Tip</a> <i class="fa fa-angle-right"></i></li>
-                  <li> <a href="#">Useful</a> <i class="fa fa-angle-right"></i></li>
-                  <li> <a href="#">FrontEnd</a> <i class="fa fa-angle-right"></i></li>
-                  <li> <a href="#">BackEnd</a> <i class="fa fa-angle-right"></i></li>
+                  <li> <a href="#">Linux</a> <i class="fa fa-angle-right" role="img"></i></li>
+                  <li> <a href="#">News</a> <i class="fa fa-angle-right" role="img"></i></li>
+                  <li> <a href="#">Project</a> <i class="fa fa-angle-right" role="img"></i></li>
+                  <li> <a href="#">Tip</a> <i class="fa fa-angle-right" role="img"></i></li>
+                  <li> <a href="#">Useful</a> <i class="fa fa-angle-right" role="img"></i></li>
+                  <li> <a href="#">FrontEnd</a> <i class="fa fa-angle-right" role="img"></i></li>
+                  <li> <a href="#">BackEnd</a> <i class="fa fa-angle-right" role="img"></i></li>
               </ul>
           </div>
           <div class="sidebar_box">
@@ -196,7 +196,7 @@
             <ul class="list-unstyled popular_post">
               <li>
                 <div class="popular_img">
-                  <a href="#"><img src="img/small-image1.jpg" class="img-responsive" alt=""></a>
+                  <a href="#"><img src="img/small-image1.jpg" class="img-responsive" alt="popular_img01"></a>
                 </div>
                 <div class="popular_desc">
                   <h5 class="ellipsis"><a href="#">국민의 자유와 권리는 헌법에 열거되지 아니한 이유로 경시되지 아니한다.</a></h5>
@@ -205,7 +205,7 @@
               </li>
               <li>
                 <div class="popular_img">
-                  <a href="#"><img src="img/small-image2.jpg" class="img-responsive" alt=""></a>
+                  <a href="#"><img src="img/small-image2.jpg" class="img-responsive" alt="popular_img02"></a>
                 </div>
                 <div class="popular_desc">
                   <h5 class="ellipsis"><a href="#">국민의 자유와 권리는 헌법에 열거되지 아니한 이유로 경시되지 아니한다.</a></h5>
@@ -214,7 +214,7 @@
               </li>
               <li>
                 <div class="popular_img">
-                  <a href="#"><img src="img/small-image3.jpg" class="img-responsive" alt=""></a>
+                  <a href="#"><img src="img/small-image3.jpg" class="img-responsive" alt="popular_img03"></a>
                 </div>
                 <div class="popular_desc">
                   <h5 class="ellipsis"><a href="#">국민의 자유와 권리는 헌법에 열거되지 아니한 이유로 경시되지 아니한다.</a></h5>
